fix: smaller font size. Placeholder goes off screen on mobie (#286)

--- a/src/search/search.module.css
+++ b/src/search/search.module.css
@@ -62,6 +62,12 @@
   background-color: var(--color-secondary1__shade3);
 }
 
+@media (max-width: 700px) {
+  :global(.ais-SearchBox-input) {
+    font-size: 2rem;
+  }
+}
+
 :global(.ais-SearchBox-input::placeholder) {
   color: var(--color-standard__white);
 }
